# Dilated-Convolution-with-Learnable-Spacings-PyTorch

./: LICENSE  README.md  Untitled.ipynb  pyproject.toml  requirements.txt  run.sh  setup.py  test.ipynb  test2.ipynb  test_1d.ipynb  test_full.ipynb
.ipynb_checkpoints/: test-checkpoint.ipynb
DCLS/construct/: modules.py
DCLS/construct/functions/: dcls_functionnal.py  spmm_functionnal.py
DCLS/construct/modules/: Dcls.py  Swc2d.py
DCLS/construct/src/: dcls_construct_1d.cpp  dcls_construct_2_1d.cpp  dcls_construct_2d.cpp  dcls_construct_3_1d.cpp  dcls_construct_3_2d.cpp  dcls_construct_3d.cpp  spmm.cpp
DCLS/functions/: dcls_functionnal.py  spmm_functionnal.py  swc_functionnal.py
DCLS/modules/: Dclr.py  Dcls.py  Swc2d.py
DCLS/src/: dcls.cpp  dcls_2_1d.cpp  dcls_2d.cpp  dcls_3_1d.cpp  dcls_3_2d.cpp  dcls_3d.cpp  im2col_dcls.cpp  im2col_dcls_2d.cpp  sparse_weight_conv.cpp
DCLS/src/cuda/: dcls.h  dcls_1d_cuda_kernel.cu  (+10 more)
DCLS/tests/: Untitled.ipynb  test.ipynb  test.py  test_1d.ipynb  test_full.ipynb  test_spmm.ipynb  test_swc.ipynb
dcls_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
functions/: dcls_functionnal-Copy1.py  dcls_functionnal.py  dcls_functionnal_full.py  dcls_functionnal_old.py  swc_functionnal.py
modules/: Dcls1d.py  Dcls2d-Copy1.py  Dcls2d.py  Dcls2dFull.py  Dcls2d_old.py
src/: dcls.cpp  dcls_1d.cpp  dcls_full.cpp  setup.py  setup_full.py  sparse_weight_conv.cpp
src/cuda/: dcls_1d_cuda_kernel.cu  dcls_cuda_kernel.cu  dcls_full_cuda_kernel.cu  sparse_weight_conv_cuda_kernel.cu
tutorials/: DCLS_Vision_Tutorial.ipynb
(+15 files in other folders)
